# krycl

./: .gitignore  CMakeLists.txt  README.md  arnoldi.cl  krycl.c  krycl.h  krycl_internal.h  krytest.c  krytest.h  mulSmDv.c  mulSmDv.cl  mulSmDv.h  simple_tests.c
cmake_modules/: FindMKL.cmake
include/kry/core/: krycl.h  mulSmDv.h
include/kry/test/: krytest.h
kernel/: CMakeLists.txt  krycore.cl
src/core/: CMakeLists.txt  krycl.c  mulSmDv.c
src/test/: CMakeLists.txt  FindMKL.cmake  krytest.c  simple_tests.c
